--- a/web/src/styles/Roads.css
+++ b/web/src/styles/Roads.css
@@ -1,6 +1,6 @@
 
 .roads-container {
-    background-color: #B6C8D5;
+    background-color: #D2A679;
     padding: 20px;
     text-align: center;
   }
