--- a/web/src/styles/Home.css
+++ b/web/src/styles/Home.css
@@ -6,7 +6,7 @@
     justify-content: flex-start; 
     padding-top: 10vh; 
     min-height: 100vh;
-    background-color:#B6C8D5; 
+    background-color:#D2A679; 
     color: #333; 
     font-family: 'Arial', sans-serif; 
   }
@@ -14,6 +14,7 @@
   .home-title {
     font-size: 2.0em;
     color: #333;
+    margin-top: -20px;
     margin-bottom: 10px;
     text-align: center;
   }
@@ -29,7 +30,8 @@
     background: #ffffff;
     margin-top: 50px;
     border-radius: 10px; /* Bordes redondeados */
-    max-width: 800px; /* Máximo ancho del contenedor */
+    max-width: 1000px; /* Máximo ancho del contenedor */
+    height: 300px;
   }
   
   .text-container {
