--- a/web/src/styles/RoadDetail.css
+++ b/web/src/styles/RoadDetail.css
@@ -1,22 +1,35 @@
 
-.centered-content {
+.road-detail {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-    background-color: #B6C8D5; /* Fondo gris claro */
+    flex-direction: row;
+    justify-content: right;
+    align-items: flex-start;
+    background-color: #D2A679; /* Fondo gris claro */
     color: #333; /* Texto de color oscuro */
     padding: 20px;
     text-align: center;
+    gap: 75px;
   }
   
   .container {
     background-color: #fff;
     padding: 20px;
+    width: 250px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
+    margin-bottom: 70px;
+    text-align: left;
+  }
+
+  .container-head {
+    padding: 10px;
+    border-radius: 8px;
+    margin-right: 100px;
+  }
+
+  .container-right {
+    margin-top: 75px;
   }
   
   h2 {
@@ -45,7 +58,7 @@
     background-color: #f2f2f2;
   }
   button {
-    background-color: #4CAF50; /* Color verde para el botón */
+    background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -53,4 +66,3 @@
     cursor: pointer;
     
   }
-  
