add the favorites funtionality and implement it in the frontend

--- a/web/src/styles/Auth.css
+++ b/web/src/styles/Auth.css
@@ -10,7 +10,7 @@
     padding: 0;
     color: #fff;
     font-family: Arial, sans-serif;
-    background-image: url('fondoApp.jpg');
+    background-image: url('images/fondoApp.jpg');
     background-size: cover;
   }
   
